--- a/ToolBox/RunForrest.Desktop/Scripts/ScriptView.xaml
+++ b/ToolBox/RunForrest.Desktop/Scripts/ScriptView.xaml
@@ -4,8 +4,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:RunForrest.Desktop"
+             xmlns:converter="clr-namespace:RunForrest.Desktop"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="350">
+
+  <UserControl.Resources>
+
+    <converter:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+
+  </UserControl.Resources>
   
   <Border Padding="0,5,0,5">
     <Grid>
@@ -38,6 +45,15 @@
                  HorizontalAlignment="Stretch"
                  FontFamily="Courier New"
                  Text="{Binding ScriptText}"/>
+      </Grid>
+      <Grid Grid.Column="1">
+        <TextBox Grid.Column="1"
+                 HorizontalAlignment="Center"
+                 VerticalAlignment="Center"
+                 FontFamily="Courier New"
+                 Text="Running..."
+                 Opacity="0.6"
+                 Visibility="{Binding IsRunning, Converter={StaticResource BoolToVisibilityConverter}}"/>
       </Grid>
 
       <!--Edit/Delete-->
