--- a/ToolBox/RunForrest.Desktop/Scripts/ScriptView.xaml
+++ b/ToolBox/RunForrest.Desktop/Scripts/ScriptView.xaml
@@ -48,8 +48,8 @@
       </Grid>
       <Grid Grid.Column="1">
         <TextBox Grid.Column="1"
-                 HorizontalAlignment="Center"
-                 VerticalAlignment="Center"
+                 HorizontalAlignment="Left"
+                 VerticalAlignment="Bottom"
                  FontFamily="Courier New"
                  Text="Running..."
                  Opacity="0.6"
